fixed exporting problems
refs #420

Change-Id: I8902c67043eb074d272c377d46be30a15584cb66